--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUKw/qmuR5iuFLG9GTEtOw",
+      "authorship_tag": "ABX9TyMoDWLzr9H4AsLtlm4dooRN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +78,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "xwKTiLM_ena9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +148,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,10 +280,149 @@
       "cell_type": "code",
       "source": [
         "                                                          #PROBLEMS OF TUPLE.\n",
-        "\n"
+        "\n",
+        "#1. Convert the following dictionary into JSON format.\n",
+        "#2. Access the value age from the given data.\n",
+        "#3. Pretty printing following JSON data.\n",
+        "\n",
+        "\n",
+        "#Sol1\n",
+        "Student_data = {\"name\": \"John\", \"age\": 24, \"marks\": 87}\n",
+        "import json\n",
+        "\n",
+        "print(type(Student_data))\n",
+        "\n",
+        "data = json.dumps(Student_data)\n",
+        "\n",
+        "print(type(data))\n",
+        "print(data)\n",
+        "\n",
+        "#Sol2\n",
+        "\n",
+        "Student_data = '{\"name\": \"John\", \"age\": 24, \"marks\": 87}'\n",
+        "import json\n",
+        "\n",
+        "data = json.loads(Student_data)   #Here we should make sure that the data should be in string format otherwise it will through error.\n",
+        "print(data[\"age\"])"
       ],
       "metadata": {
-        "id": "cuEkRAcniKLo"
+        "id": "cuEkRAcniKLo",
+        "outputId": "0a7aa1d6-aa26-4d9c-c89c-c9fc9f91932c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'dict'>\n",
+            "<class 'str'>\n",
+            "{\"name\": \"John\", \"age\": 24, \"marks\": 87}\n",
+            "24\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sol3- sorting in JSON and writing in a file.\n",
+        "Student_data = {\"name\": \"John\", \"age\": 24, \"marks\": 87}\n",
+        "\n",
+        "f = open(\"demo.json\", \"w\")\n",
+        "\n",
+        "data = json.dumps(Student_data, indent = 4, sort_keys= True)\n",
+        "\n",
+        "f.write(data)\n",
+        "\n",
+        "print(\"The data has been added to the file.\")"
+      ],
+      "metadata": {
+        "id": "Aw0adEICwAYu",
+        "outputId": "04d2e228-e493-4a37-f909-bb30af3c936a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The data has been added to the file.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "                                                            #INTRODUCTION TO DICTIONARY.\n",
+        "\n",
+        "\n",
+        "#Dictionary allows the user to write the data in the form of keys and values format.\n",
+        "#It is enclosed by curly brackets.\n",
+        "#Keys and values are separated by colon.\n",
+        "#keys and values both are separated by comma(,).\n",
+        "#Indexing can be done with the help of keys.\n",
+        "\n",
+        "#e.g\n",
+        "employee = {\"Name\": \"Akhilesh\", \"Age\":32, \"Gender\": \"Male\"}\n",
+        "print(employee)"
+      ],
+      "metadata": {
+        "id": "GYuukA-Wy6Pz",
+        "outputId": "38652dda-d5e3-4178-ce09-2626adcb4f0a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Name': 'Akhilesh', 'Age': 32, 'Gender': 'Male'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Indexing\n",
+        "print(employee[\"Gender\"])"
+      ],
+      "metadata": {
+        "id": "TW9byV6D1BYK",
+        "outputId": "19101952-0b46-4949-e90c-3cbf4e686ae8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Male\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "                                                       #Iteration in dictionary."
+      ],
+      "metadata": {
+        "id": "OboLCZ1x1JEB"
       },
       "execution_count": null,
       "outputs": []
