--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoDWLzr9H4AsLtlm4dooRN",
+      "authorship_tag": "ABX9TyPLaI39/g5Y2hkwts3Mb7MY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -312,7 +312,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +347,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,7 +381,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +405,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,6 +423,363 @@
       ],
       "metadata": {
         "id": "OboLCZ1x1JEB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "student = {\"name\": \"Rashi\", \"age\": 34, \"roll no\": 23, \"gender\": \"female\"}\n",
+        "for x in student:\n",
+        "  print(x)\n",
+        "\n",
+        "#Here we can find the keys by applying this syntax.\n",
+        "\n",
+        "#for values.\n",
+        "\n",
+        "for x in student:\n",
+        "  print(student[x])"
+      ],
+      "metadata": {
+        "id": "EOJ5KcCr1xE6",
+        "outputId": "2ce71ff6-473d-4d9b-cb99-234a08198c54",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "name\n",
+            "age\n",
+            "roll no\n",
+            "gender\n",
+            "Rashi\n",
+            "34\n",
+            "23\n",
+            "female\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#We can also find the values by using values methodd.\n",
+        "for x in student.values():\n",
+        "  print(x)"
+      ],
+      "metadata": {
+        "id": "yRvyCdgw2Zpl",
+        "outputId": "ed50def5-30dd-4702-cc29-043ec2239ae1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Rashi\n",
+            "34\n",
+            "23\n",
+            "female\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#For both keys and value we can apply the items function.\n",
+        "for x,y in student.items():\n",
+        "  print(x,y)"
+      ],
+      "metadata": {
+        "id": "iR4n0ieg3IEh",
+        "outputId": "9a1943d5-d991-4836-959f-0e74a15aa062",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "name Rashi\n",
+            "age 34\n",
+            "roll no 23\n",
+            "gender female\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#There are some other functions in the dictionary like- get, copy, key, values, items.\n",
+        "\n",
+        "#1. GET FUNC\n",
+        "student = {\"name\": \"Rashi\", \"age\": 34, \"roll no\": 23, \"gender\": \"female\"}\n",
+        "a = student.get(\"name\")\n",
+        "print(a)\n",
+        "\n",
+        "#also by\n",
+        "print(student.get(\"name\"))\n",
+        "\n",
+        "#2. COPY FUNC\n",
+        "\n",
+        "data = student.copy()\n",
+        "print(data)\n",
+        "\n",
+        "#3. keys func\n",
+        "\n",
+        "print(student.keys())\n",
+        "\n",
+        "#4. Values func\n",
+        "\n",
+        "print(student.values())\n",
+        "\n",
+        "#5. Items func\n",
+        "\n",
+        "print(student.items())\n"
+      ],
+      "metadata": {
+        "id": "lFLBGQot3Xk1",
+        "outputId": "ec8d178b-260b-4705-de4b-aa2172f986ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Rashi\n",
+            "Rashi\n",
+            "{'name': 'Rashi', 'age': 34, 'roll no': 23, 'gender': 'female'}\n",
+            "dict_keys(['name', 'age', 'roll no', 'gender'])\n",
+            "dict_values(['Rashi', 34, 23, 'female'])\n",
+            "dict_items([('name', 'Rashi'), ('age', 34), ('roll no', 23), ('gender', 'female')])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Some other functions of dictionaries are- Set default, update, pop, popitem and clear.\n",
+        "student = {\"name\": \"Rashi\", \"age\": 34, \"roll no\": 23, \"gender\": \"female\"}\n",
+        "\n",
+        "#1. Set default- This function will not let the change the data.\n",
+        "\n",
+        "a = student.setdefault(\"roll no\",33)\n",
+        "print(a)                                     #Here still the roll no is 23"
+      ],
+      "metadata": {
+        "id": "XID1G0A4312J",
+        "outputId": "2b794741-3361-42d8-e702-079908db0c7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "23\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "                                                        #Nested Dictionary.\n",
+        "\n",
+        "#A dictionary under a dictionary called the nested dictionary.\n",
+        "#e.g\n",
+        "\n",
+        "employee = {1:{\"name\": \"Leon\", \"age\":45, \"gender\": \"male\"},\n",
+        "            2:{\"name\": \"Lisa\", \"age\":43, \"gender\": \"female\"}}\n",
+        "\n",
+        "#How can we find anything from the nested dictionary.\n",
+        "print(employee[2][\"age\"])\n",
+        "print(employee[1])\n",
+        "print(employee[1][\"name\"])"
+      ],
+      "metadata": {
+        "id": "XsufhDH36n6V",
+        "outputId": "d7710b7c-1e83-4bf5-8867-8df0ee225b37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "43\n",
+            "{'name': 'Leon', 'age': 45, 'gender': 'male'}\n",
+            "Leon\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Problem Solving.\n",
+        "\n",
+        "#1. Write a python program to sort a dictionary by value.\n",
+        "#2. Write a python script to print a dictionary where the keys are the numbers between 1 and 15 and the values are their square.\n",
+        "#3. write a program to mumtiply all the items of the dictionary.\n",
+        "#4. write a python program to sort a dictionary by key.\n"
+      ],
+      "metadata": {
+        "id": "EYj1o139-AQe"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1st sol\n",
+        "a = {\"a\":2, \"b\":1, \"c\":3, \"d\":4}\n",
+        "a = sorted(a.values())\n",
+        "print(a)\n",
+        "\n",
+        "\n",
+        "\n",
+        "a = {\"b\":1, \"a\":2, \"c\":3, \"d\":4}\n",
+        "b = sorted(a)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "JrrlaOEu_Z3y",
+        "outputId": "df94eb66-1a8e-4537-d775-497e67c69b21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4]\n",
+            "['a', 'b', 'c', 'd']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2nd sol\n",
+        "a = {}\n",
+        "for i in range(1,16):\n",
+        "  a[i]= i**2\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "rt-GyuUL_lVP",
+        "outputId": "c3e8ec26-6069-47e2-d4a8-5f8bd97fc973",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100, 11: 121, 12: 144, 13: 169, 14: 196, 15: 225}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#3rd sol- to multiply all the items in a dictionary.\n",
+        "a = {\"a\":1, \"b\":2, \"c\":3, \"d\":4}\n",
+        "product = 1\n",
+        "for i in a:\n",
+        "  product *= a[i]\n",
+        "print(product)"
+      ],
+      "metadata": {
+        "id": "RNMtYaRnAuWJ",
+        "outputId": "c592e95c-5192-4a50-8c08-53cea5bee531",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "24\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = {\"b\":1, \"a\":2, \"c\":3, \"d\":4}\n",
+        "b = sorted(a)\n",
+        "print(b)\n",
+        "\n",
+        "#or\n",
+        "\n",
+        "a =sorted(a.keys())\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "m5yYwrA8BgMo",
+        "outputId": "3adc70df-ec8f-497c-fe01-373b290738b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['a', 'b', 'c', 'd']\n",
+            "['a', 'b', 'c', 'd']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0bEglBAxCzMY"
       },
       "execution_count": null,
       "outputs": []
