--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLaI39/g5Y2hkwts3Mb7MY",
+      "authorship_tag": "ABX9TyMIL4JyfF+MRARnrnicZh5i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -647,13 +647,13 @@
         "\n",
         "#1. Write a python program to sort a dictionary by value.\n",
         "#2. Write a python script to print a dictionary where the keys are the numbers between 1 and 15 and the values are their square.\n",
-        "#3. write a program to mumtiply all the items of the dictionary.\n",
+        "#3. write a program to multiply all the items of the dictionary.\n",
         "#4. write a python program to sort a dictionary by key.\n"
       ],
       "metadata": {
         "id": "EYj1o139-AQe"
       },
-      "execution_count": 23,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -747,6 +747,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Sol4\n",
         "a = {\"b\":1, \"a\":2, \"c\":3, \"d\":4}\n",
         "b = sorted(a)\n",
         "print(b)\n",
@@ -761,9 +762,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m5yYwrA8BgMo",
-        "outputId": "3adc70df-ec8f-497c-fe01-373b290738b7"
+        "outputId": "ca4d17ed-cb1e-4a29-a9a7-6aa944e30586"
       },
-      "execution_count": 46,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,11 +778,235 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "                                                #Introduction to sets.\n",
+        "#Sets are the unordered collection of mutable data. Every element in a set is unique.\n",
+        "#Written by curly brackets and separated by comma(,).\n"
+      ],
       "metadata": {
         "id": "0bEglBAxCzMY"
       },
-      "execution_count": 46,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = {\"Ironman\", \"Thor\", \"Hulk\", \"Captain America\"}\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "AfVAjbMcDC_q",
+        "outputId": "7ff50d03-596d-47f4-9c54-2129ee27b07a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Thor', 'Captain America', 'Ironman', 'Hulk'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Set functions- Add, pop, remove, discard, copy.\n",
+        "\n",
+        "a.add(\"Spiderman\")\n",
+        "print(a)\n"
+      ],
+      "metadata": {
+        "id": "U-ZhZ9wOEwZC",
+        "outputId": "98a4e2e8-f536-4a53-f506-6725652f0dc8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Spiderman', 'Ironman', 'Captain America', 'Thor', 'Hulk'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = {\"Ironman\", \"Thor\", \"Hulk\", \"Captain America\"}\n",
+        "for x in a:\n",
+        "   print(x)\n",
+        "\n",
+        "print(type(a))"
+      ],
+      "metadata": {
+        "id": "pQUwwxBCJx43",
+        "outputId": "c6fc4cd7-9a86-4b94-dad6-a5eab4af1e7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Captain America\n",
+            "Thor\n",
+            "Ironman\n",
+            "Hulk\n",
+            "<class 'set'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#pop method\n",
+        "a = {\"Ironman\", \"Thor\", \"Hulk\", \"Captain America\"}\n",
+        "a.pop()\n",
+        "print(a)\n"
+      ],
+      "metadata": {
+        "id": "ok73_w3fRfAT",
+        "outputId": "b2762733-5a17-499b-fc8c-3653b7a82034",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Thor', 'Ironman', 'Hulk'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#pop method\n",
+        "a = {\"Ironman\", \"Thor\", \"Hulk\", \"Captain America\"}\n",
+        "a.pop()\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "-t-GVvXdVAj8",
+        "outputId": "0120e2dd-0f90-4475-9e60-946370cd0d6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Thor', 'Ironman', 'Hulk'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Remove method.\n",
+        "a = {\"Ironman\", \"Thor\", \"Hulk\", \"Captain America\"}\n",
+        "a.remove(\"Hulk\")\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "lLPXk9K5e2Q-",
+        "outputId": "23431167-0276-4011-fee0-fdb65b2f84a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Captain America', 'Thor', 'Ironman'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Discard method.\n",
+        "a = {\"Ironman\", \"Thor\", \"Hulk\", \"Captain America\"}\n",
+        "a.discard(\"Hulk\")\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "GfiCkPGDfNZq",
+        "outputId": "e2f43ea7-2786-488e-db25-93b8d62dc20c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Captain America', 'Thor', 'Ironman'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Copy\n",
+        "a = {\"Ironman\", \"Thor\", \"Hulk\", \"Captain America\"}\n",
+        "b = a.copy()\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "xRh7xcj5f45K",
+        "outputId": "f433aa43-009c-4c1d-8d1d-a3053c4bff09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Captain America', 'Thor', 'Ironman', 'Hulk'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8Z6zlRXSgFp5"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
