--- a/Copy_of_Untitled71.ipynb
+++ b/Copy_of_Untitled71.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIL4JyfF+MRARnrnicZh5i",
+      "authorship_tag": "ABX9TyMNre1UA6VXwbCnads0/OSb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -448,7 +448,7 @@
         "id": "EOJ5KcCr1xE6",
         "outputId": "2ce71ff6-473d-4d9b-cb99-234a08198c54"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +480,7 @@
         "id": "yRvyCdgw2Zpl",
         "outputId": "ed50def5-30dd-4702-cc29-043ec2239ae1"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +508,7 @@
         "id": "iR4n0ieg3IEh",
         "outputId": "9a1943d5-d991-4836-959f-0e74a15aa062"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,7 +559,7 @@
         "id": "lFLBGQot3Xk1",
         "outputId": "ec8d178b-260b-4705-de4b-aa2172f986ec"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,7 +593,7 @@
         "id": "XID1G0A4312J",
         "outputId": "2b794741-3361-42d8-e702-079908db0c7e"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -627,7 +627,7 @@
         "id": "XsufhDH36n6V",
         "outputId": "d7710b7c-1e83-4bf5-8867-8df0ee225b37"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -653,7 +653,7 @@
       "metadata": {
         "id": "EYj1o139-AQe"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -677,7 +677,7 @@
         "id": "JrrlaOEu_Z3y",
         "outputId": "df94eb66-1a8e-4537-d775-497e67c69b21"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -705,7 +705,7 @@
         "id": "rt-GyuUL_lVP",
         "outputId": "c3e8ec26-6069-47e2-d4a8-5f8bd97fc973"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -733,7 +733,7 @@
         "id": "RNMtYaRnAuWJ",
         "outputId": "c592e95c-5192-4a50-8c08-53cea5bee531"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -764,7 +764,7 @@
         "id": "m5yYwrA8BgMo",
         "outputId": "ca4d17ed-cb1e-4a29-a9a7-6aa944e30586"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -786,7 +786,7 @@
       "metadata": {
         "id": "0bEglBAxCzMY"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -802,7 +802,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -828,7 +828,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -855,7 +855,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -885,7 +885,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -911,7 +911,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -937,7 +937,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -963,7 +963,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -989,7 +989,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1002,9 +1002,309 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Other 5 functions of sets- isdisjoint, issubset, issuperset, clear and update function."
+      ],
       "metadata": {
         "id": "8Z6zlRXSgFp5"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#isdisjoint function- It will check the elements of set b is present into set a or not. if not then 'True' else 'False'.\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "b = {6, 7, 8}\n",
+        "c = {2, 3}\n",
+        "\n",
+        "print(a.isdisjoint(b))\n"
+      ],
+      "metadata": {
+        "id": "wrguHrT_nd9k",
+        "outputId": "4b437d56-d21d-40cc-b040-339a8e1d82c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#issubset- Check if the elements of set b is present in set a or not.\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "b = {6, 7, 8}\n",
+        "c = {2, 3}\n",
+        "\n",
+        "print(c.issubset(a)) #because all the elements of c is present in a but in second case all the elements of a is not present in c.\n",
+        "print(a.issubset(c))\n"
+      ],
+      "metadata": {
+        "id": "lvGDub5koA96",
+        "outputId": "ac8c0601-76b3-4264-c40e-62733fd82103",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a.issuperset(b))"
+      ],
+      "metadata": {
+        "id": "WEMuuxoVowrX",
+        "outputId": "bfea1c1a-a835-4797-c74f-0bd1f2904507",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#issuperset function- Will True if all the elements of a set is present in the other set else false.\n",
+        "\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "b = {6, 7, 8}\n",
+        "c = {2, 3}\n",
+        "\n",
+        "print(c.issuperset(a)) #c is not a superset of a because here c is not carrying all the elements of a.\n",
+        "\n",
+        "print(a.issuperset(c)) #True because a is carrying all the element of c.\n"
+      ],
+      "metadata": {
+        "id": "XhB51JY_pR3f",
+        "outputId": "5c7951db-c948-4ebf-daa9-bef6c31a8169",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Update func- It is basically behaves as a 'UNION' means it will give all the unique elements of both the set without repeating the elements.\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "b = {6, 7, 8}\n",
+        "c = {2, 3, 7}\n",
+        "\n",
+        "a.update(c)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "oO1__b7FqD_8",
+        "outputId": "b230574c-9797-4f3f-b34b-1c0c1c89e564",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5, 7}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#clear func- It will clear the whole set. In simple terms it will do clear all the elements of the set and gives you an empty set.\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "b = {6, 7, 8}\n",
+        "c = {2, 3}\n",
+        "x  = a.clear()\n",
+        "print(x)\n",
+        "print(a)\n",
+        "\n",
+        "#or\n",
+        "\n",
+        "print(a.clear())\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "PwJcGpsfrPLz",
+        "outputId": "1c46d3b3-4aec-4537-8f29-82858ed3c54f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "None\n",
+            "set()\n",
+            "None\n",
+            "set()\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#7 Other functions of sets.\n",
+        "#Union, difference, difference update, intersection, intersection update, symmetric, symmetric update.\n",
+        "\n",
+        "#Union func\n",
+        "\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "b = {6, 7, 8}\n",
+        "c = {2, 3}\n",
+        "\n",
+        "print(a.union(b))  #Will provide all the unique elements of both the sets."
+      ],
+      "metadata": {
+        "id": "r5QnrU98rb1d",
+        "outputId": "4ce6fec3-61fa-4e2c-bd38-32bc34392977",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5, 6, 7, 8}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#difference func- It will give you the difference of the set.\n",
+        "\n",
+        "print(a.difference(c))  #will remove the common elements and results will only be the unique elements."
+      ],
+      "metadata": {
+        "id": "TnC1DFDEsySu",
+        "outputId": "43f55581-1833-4949-ca16-df1bf8fb66e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 4, 5}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#difference update- Will give the update in the difference in the orignal set.\n",
+        "a.difference_update(c)\n",
+        "print(a)\n"
+      ],
+      "metadata": {
+        "id": "MNTlKJXJtGvI",
+        "outputId": "c00c5d55-d2b9-4d66-df62-269dbf5c8a33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 4, 5}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Intersection func- Results with the common value.\n",
+        "\n",
+        "a = {1, 2, 3, 4, 5}\n",
+        "c = {2, 3}\n",
+        "\n",
+        "print(a.intersection(c))"
+      ],
+      "metadata": {
+        "id": "ANOLXiZqtjrv",
+        "outputId": "426041a1-5ac0-4aad-d52e-1cda7efd0a46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{2, 3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pkE5PC_qux0H"
       },
       "execution_count": null,
       "outputs": []
